# codewars-c-

./: CMakeLists.txt
is_uppercase/: README.md  solution.cpp
lario_and_muigi/: README.MD  solution.cpp
make_uppercase/: solution.cpp
quarter_of_the_year/: README.md  solution.cpp
rock_paper_scissors/: README.md  solution.cpp
you_only_need_one/: README.md  solution.cpp
