cmake_minimum_required(VERSION 4.2)
project(codewars_c__)

set(CMAKE_CXX_STANDARD 20)


add_executable(is_uppercase is_uppercase/solution.cpp)
add_executable(quarter_of_the_year quarter_of_the_year/solution.cpp)
add_executable(rock_paper_scissors rock_paper_scissors/solution.cpp)
add_executable(lario_and_muigi lario_and_muigi/solution.cpp)
add_executable(make_uppercase make_uppercase/solution.cpp)
add_executable(you_only_need_one you_only_need_one/solution.cpp)